2003-02-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/TODO: update.

2003-02-08  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* include/avr/ioat94k.h: Fix external/FPGA interrupts.
	(Thanks to Nishiyama Naoki for catching this.)

2003-02-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io.h: Document SPM_PAGESIZE.
	* doc/api/using-tools.dox: Add a few more gcc options.

2003-02-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io.h: Document SPM_PAGESIZE.

2003-02-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128.h: Add SPM_PAGESIZE.
	* include/avr/iom16.h: Add SPM_PAGESIZE.
	* include/avr/iom161.h: Add SPM_PAGESIZE.
	* include/avr/iom162.h: Add SPM_PAGESIZE.
	* include/avr/iom163.h: Add SPM_PAGESIZE.
	* include/avr/iom169.h: Add SPM_PAGESIZE.
	* include/avr/iom32.h: Add SPM_PAGESIZE.
	* include/avr/iom323.h: Add SPM_PAGESIZE.
	* include/avr/iom64.h: Add SPM_PAGESIZE.
	* include/avr/iom8.h: Add SPM_PAGESIZE.
	* include/avr/iom8515.h: Add SPM_PAGESIZE.
	* include/avr/iom8535.h: Add SPM_PAGESIZE.

2003-02-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/acknowledge.dox: mention Eric Weddington.

2003-02-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: fix an HREF.

2003-02-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/TODO: remove the ina.90 xref check, Eric did it.

2003-02-03  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/TODO: Wrap a line (format only).
	* include/stdio.h: Grammatical and readiblity cleanups.

2003-01-20  Theodore A. Roth  <troth@openavr.org>

	* doc/api/Makefile.am (EXTRA_DIST): Add unjs.pl.

2003-01-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/TODO: Remove note about sleep.h.
	* include/avr/sleep.h: Make it work with any device (mostly).

2003-01-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: add SEEK_*.
