@@ -61,7 +61,9 @@
 
 /* ADC Data Register */
 #define ADCW      _SFR_IO16(0x04) /* for backwards compatibility */
+#ifndef __ASSEMBLER__
 #define ADC       _SFR_IO16(0x04)
+#endif
 #define ADCL      _SFR_IO8(0x04)
 #define ADCH      _SFR_IO8(0x05)
 
