@@ -52,7 +52,9 @@
 
 /* ADC */
 #define ADCW	_SFR_IO16(0x04)
+#ifndef __ASSEMBLER__
 #define ADC	_SFR_IO16(0x04)
+#endif
 #define ADCL	_SFR_IO8(0x04)
 #define ADCH	_SFR_IO8(0x05)
 #define ADCSR	_SFR_IO8(0x06)
