@@ -51,8 +51,10 @@
 #define TWDR    _SFR_IO8(0x03)
 
 /* ADC Data register */
+#ifndef __ASSEMBLER__
 #define ADC     _SFR_IO16(0x04)
-#define ADCW    ADC
+#endif
+#define ADCW    _SFR_IO16(0x04)
 #define ADCL    _SFR_IO8(0x04)
 #define ADCH    _SFR_IO8(0x05)
 
